--- a/static/css/main.css
+++ b/static/css/main.css
@@ -146,15 +146,6 @@ main {
     }
 
     .calendar ul {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .calendar li {
-        width: 10%;
-    }
-
-    .calendar ul {
         background: white;
     }
 
@@ -854,7 +845,8 @@ footer .footer_social_media svg {
 
 .day_filter_options {
     position: relative;
-    width: 20%;
+    width: 15%;
+    margin: 0 auto;
 }
 
 .day_filter_options h2 {
@@ -906,7 +898,8 @@ footer .footer_social_media svg {
 }
 
 .day_filter_categories {
-    width: 80%;
+    margin-bottom: 2.5rem;
+    width: 85%;
     padding: 1rem 2rem 0 2rem;
     background-color: black;
 }
@@ -959,3 +952,98 @@ footer .footer_social_media svg {
 .titles a:hover {
     cursor: pointer;
 }
+
+.grid_toggle {
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.grid_toggle svg {
+    width: 3rem;
+    height: 3rem;
+    padding: 0.6rem;
+    margin-left: 1rem;
+    border: 3px solid black;
+}
+
+.grid_toggle .grid_layout {
+    background: black;
+}
+
+.grid_toggle .grid_layout path {
+    fill: white;
+}
+
+@media (min-width: 36rem) {
+    .day_filter_categories section {
+        width: 40%;
+        margin-right: 2rem;
+    }
+
+    .day_filter_categories {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 5rem;
+    }
+}
+
+@media (min-width: 77.5rem) {
+    .day_filter_options h2 {
+        display: block;
+        margin-bottom: 2rem; 
+    }
+
+    .day_filter_options_filter {
+        position: relative;
+    }
+
+    .day_filter_options_filter span {
+        display: block;
+        position: absolute;
+        left: 5rem;
+        transform: translateY(-2.2rem);
+        float: right;
+        font-size: 1rem;
+    }
+
+    .day_filter_options_filter {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .day_filter_options_filter .first_li {
+        background: black;
+    }
+
+    .day_filter_options_filter .first_li span {
+        color: white;
+    }
+
+    .day_filter_options_filter li {
+        border: 3px solid black;
+        display: inline-block;
+    }
+
+    .day_filter_categories {
+        width: 70%;
+    }
+
+    .day_filter_options_filter svg {
+        border: none;
+    }
+
+    .day_filter_options_checkbox {
+        position: absolute;
+        top: 23rem;
+        display: block;
+    }
+}
+
+@media (min-width: 48rem) {
+    .events_per_category ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+
