--- a/static/css/main.css
+++ b/static/css/main.css
@@ -966,11 +966,17 @@ footer .footer_social_media svg {
     border: 3px solid black;
 }
 
-.grid_toggle .grid_layout {
+.grid_toggle .selected {
     background: black;
 }
 
-.grid_toggle .grid_layout path {
+.grid_toggle svg:hover {
+    cursor: pointer;
+}
+
+
+
+.grid_toggle .selected path {
     fill: white;
 }
 
@@ -1039,11 +1045,72 @@ footer .footer_social_media svg {
     }
 }
 
+.events_per_category .selected li{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.events_per_category .titles .selected li {
+    position: relative;
+    background: black;
+    height: 5rem;
+    margin-bottom: 2rem;
+}
+
+.events_per_category .titles .selected .date__time {
+    display: inline-block;
+}
+
+.events_per_category section {
+    margin-bottom: 3rem;
+}
+
+.events_per_category .selected .highlight-bottom__content {
+    display: flex;
+}
+
+.events_per_category .titles .selected h2 {
+    color: white;
+}
+
+.events_per_category .titles .selected .bottom__loc {
+    position: absolute;
+    right: 1rem;
+    top: 40%;
+    color: white;
+}
+
+.titles .selected .highlight-bottom__content .bottom__date {
+    padding: 0;
+    font-size: 1.2rem;
+    width: 10%;
+    position: absolute;
+    top: 50%;
+}
+
+.highlight-bottom__content .selected .bottom__title {
+    position: absolute;
+    font-size: 1rem;
+    left: 15%;
+    bottom: 0.5rem;
+}
+
+.events_per_category .selected li img {
+    display: none;
+}
+
 @media (min-width: 48rem) {
     .events_per_category ul {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        width: 100%;
+        margin: auto;
+    }
+
+    .events_per_category ul li {
+        padding-right: 1.5rem;
+        width: 1/3;
     }
 }
 
